# ActiveTraceSDD

./: .gitignore  CHANGES.md  docker-compose.yml  package-lock.json
backend/: .coverage  .env  .env.example  Dockerfile  pyproject.toml
backend/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_tenant.py  002_create_rbac_tables.py  004_audit_log.py  005_carrera_cohorte_materia.py  006_usuario_pii_asignacion.py  007_padron.py  007_slot_encuentro_instancia_guardia.py  008_calificacion_umbral.py  009_comunicacion.py  010_evaluaciones.py  011_avisos.py  012_aviso_acknowledgment.py  013_tareas_internas.py  014_programas_y_fechas_academicas.py  015_c18_liquidaciones.py  016_c20_mensaje_perfil.py  3a51a71a68ef_c_03_auth_jwt_2fa.py
backend/app/: main.py
backend/app/core/: audit.py  config.py  database.py  dependencies.py  encryption.py  exceptions.py  logging.py  observability.py  permissions.py  security.py  seed_rbac.py  tenancy.py
backend/app/integrations/: moodle_ws.py  n8n_client.py
backend/app/models/: __init__.py  asignacion.py  audit_log.py  aviso.py  calificacion.py  comunicacion.py  estructura.py  evaluacion.py  guardia.py  instancia_encuentro.py  mensaje.py  mixins.py  padron.py  password_reset_token.py  programa_materia.py  rate_limit_bucket.py  refresh_token.py  role.py  slot_encuentro.py  tarea.py  tenant.py  two_factor_enrollment.py  umbral_materia.py  user.py
backend/app/repositories/: __init__.py  analisis_repository.py  asignaciones.py  audit_log_repository.py  auditoria_log_query_repository.py  auditoria_panel_repository.py  aviso_repository.py  base.py  (+18 more)
backend/tests/: conftest.py  test_analisis.py  test_api_asignaciones.py  test_api_usuarios.py  test_app_startup.py  test_audit_helper.py  test_audit_log_repository.py  test_auditoria_panel.py  test_auth.py  test_auth_c07.py  test_avisos.py  test_c20_phase1.py  test_c20_phase2.py  test_c20_phase3.py  test_c20_phase4.py  test_c20_phase5.py  test_c20_phase6.py  test_carrera.py  test_cohorte.py  test_comunicaciones.py  test_config.py  test_database.py  test_encryption.py  test_evaluaciones.py  test_health.py  test_impersonation.py  test_impersonation_context.py  test_inbox.py  test_materia.py  test_migracion_006.py  test_migration_001.py  test_migration_002.py  test_migration_003.py  test_migration_004.py  test_migration_005.py  test_models_c07.py  test_models_mixins.py  test_moodle_sync_endpoint.py  test_moodle_ws.py  test_padron_api.py  (+22 more)
(+518 files in other folders)
